Fixed low quality logos and settings pages.